--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   "dependencies": {
     "core-js": "^3.6.5",
     "less-loader": "6.0.0",
-    "vue": "^2.6.11"
+    "vue": "^2.6.11",
+    "vue-amazing-selector": "^0.2.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.15",
