--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
     "core-js": "^3.6.5",
     "echarts": "^5.3.3",
     "less-loader": "6.0.0",
+    "swiper": "5.4.5",
     "vue": "^2.6.11",
-    "vue-amazing-selector": "^0.2.1"
+    "vue-amazing-selector": "^0.2.1",
+    "vue-router": "3.6.4"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.15",
