--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "swiper": "5.4.5",
     "vue": "^2.6.11",
     "vue-amazing-selector": "^0.2.1",
-    "vue-router": "3.6.4"
+    "vue-router": "3.6.4",
+    "vuedraggable": "^2.24.3"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.15",
