--- a/package.json
+++ b/package.json
@@ -8,12 +8,12 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^0.27.2",
     "core-js": "^3.6.5",
     "echarts": "^5.3.3",
-    "less-loader": "6.0.0",
     "swiper": "5.4.5",
     "vue": "^2.6.11",
-    "vue-amazing-selector": "^0.2.1",
+    "vue-amazing-selector": "^0.2.2",
     "vue-router": "3.6.4",
     "vuedraggable": "^2.24.3"
   },
@@ -22,8 +22,10 @@
     "@vue/cli-plugin-eslint": "~4.5.15",
     "@vue/cli-service": "~4.5.15",
     "babel-eslint": "^10.1.0",
+    "compression-webpack-plugin": "^10.0.0",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.2.2",
+    "less-loader": "5.0.0",
     "vue-template-compiler": "^2.6.11"
   },
   "eslintConfig": {
