--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "swiper": "5.4.5",
     "vue": "^2.6.11",
     "vue-amazing-selector": "^0.2.4",
+    "vue-lazyload": "1.3.3",
     "vue-router": "3.6.4",
     "vuedraggable": "^2.24.3"
   },
