--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "core-js": "^3.6.5",
     "echarts": "^5.3.3",
     "swiper": "5.4.5",
-    "vue": "^2.6.11",
+    "vue": "2.6.12",
     "vue-amazing-selector": "^0.2.6",
     "vue-lazyload": "1.3.3",
     "vue-router": "3.6.4",
@@ -27,7 +27,7 @@
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.2.2",
     "less-loader": "5.0.0",
-    "vue-template-compiler": "^2.6.11"
+    "vue-template-compiler": "2.6.12"
   },
   "eslintConfig": {
     "root": true,
