--- a/package.json
+++ b/package.json
@@ -24,7 +24,6 @@
     "@vue/cli-service": "~4.5.15",
     "@vue/eslint-config-standard": "^5.1.2",
     "babel-eslint": "^10.1.0",
-    "compression-webpack-plugin": "^6.0.2",
     "eslint": "^6.7.2",
     "eslint-plugin-import": "^2.20.2",
     "eslint-plugin-node": "^11.1.0",
@@ -34,21 +33,9 @@
     "less": "^4.1.3",
     "less-loader": "5.0.0",
     "vue-template-compiler": "2.6.12",
-    "webpack-bundle-analyzer": "^4.6.1"
-  },
-  "eslintConfig": {
-    "root": true,
-    "env": {
-      "node": true
-    },
-    "extends": [
-      "plugin:vue/essential",
-      "eslint:recommended"
-    ],
-    "parserOptions": {
-      "parser": "babel-eslint"
-    },
-    "rules": {}
+    "webpack-bundle-analyzer": "^4.6.1",
+    "babel-plugin-transform-remove-console": "^6.9.4",
+    "compression-webpack-plugin": "^6.0.2"
   },
   "browserslist": [
     "> 1%",
