--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "core-js": "^3.6.5",
     "echarts": "^5.3.3",
     "swiper": "5.4.5",
-    "vue": "2.6.12",
+    "vue": "^2.6.12",
     "vue-amazing-selector": "^0.2.6",
     "vue-lazyload": "1.3.3",
     "vue-router": "3.6.4",
@@ -31,8 +31,8 @@
     "eslint-plugin-standard": "^5.0.0",
     "eslint-plugin-vue": "^6.2.2",
     "less": "^4.1.3",
-    "less-loader": "5.0.0",
-    "vue-template-compiler": "2.6.12",
+    "less-loader": "^5.0.0",
+    "vue-template-compiler": "^2.6.12",
     "webpack-bundle-analyzer": "^4.6.1",
     "babel-plugin-transform-remove-console": "^6.9.4",
     "compression-webpack-plugin": "^6.0.2"
