--- a/package.json
+++ b/package.json
@@ -11,12 +11,15 @@
     "axios": "^0.27.2",
     "core-js": "^3.6.5",
     "echarts": "^5.3.3",
+    "pdfh5": "^1.4.2",
     "swiper": "5.4.5",
     "vue": "^2.6.12",
     "vue-amazing-selector": "^0.2.6",
     "vue-lazyload": "1.3.3",
+    "vue-pdf": "^4.3.0",
     "vue-router": "3.6.4",
-    "vuedraggable": "^2.24.3"
+    "vuedraggable": "^2.24.3",
+    "wc-messagebox": "^1.10.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.15",
@@ -24,6 +27,8 @@
     "@vue/cli-service": "~4.5.15",
     "@vue/eslint-config-standard": "^5.1.2",
     "babel-eslint": "^10.1.0",
+    "babel-plugin-transform-remove-console": "^6.9.4",
+    "compression-webpack-plugin": "^6.0.2",
     "eslint": "^6.7.2",
     "eslint-plugin-import": "^2.20.2",
     "eslint-plugin-node": "^11.1.0",
@@ -33,9 +38,7 @@
     "less": "^4.1.3",
     "less-loader": "^5.0.0",
     "vue-template-compiler": "^2.6.12",
-    "webpack-bundle-analyzer": "^4.6.1",
-    "babel-plugin-transform-remove-console": "^6.9.4",
-    "compression-webpack-plugin": "^6.0.2"
+    "webpack-bundle-analyzer": "^4.6.1"
   },
   "browserslist": [
     "> 1%",
