--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "axios": "^0.27.2",
     "core-js": "^3.6.5",
+    "date-fns": "^2.29.3",
     "echarts": "^5.3.3",
     "pdfh5": "^1.4.2",
     "swiper": "5.4.5",
