--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "ant-design-vue": "1.7.8",
     "axios": "^0.27.2",
     "core-js": "^3.6.5",
     "date-fns": "^2.29.3",
@@ -28,6 +29,7 @@
     "@vue/cli-service": "~4.5.15",
     "@vue/eslint-config-standard": "^5.1.2",
     "babel-eslint": "^10.1.0",
+    "babel-plugin-import": "^1.13.5",
     "babel-plugin-transform-remove-console": "^6.9.4",
     "compression-webpack-plugin": "^6.0.2",
     "eslint": "^6.7.2",
