--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "echarts": "^5.3.3",
     "pdfh5": "^1.4.2",
     "swiper": "5.4.5",
+    "three": "^0.146.0",
     "vue": "^2.6.12",
     "vue-amazing-selector": "^0.2.6",
     "vue-lazyload": "1.3.3",
