--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "date-fns": "^2.29.3",
     "echarts": "^5.3.3",
     "pdfh5": "^1.4.2",
+    "store": "^2.0.12",
     "swiper": "5.4.5",
     "three": "^0.146.0",
     "vue": "^2.6.12",
