--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "ant-design-vue": "1.7.8",
+    "ant-design-vue": "^1.7.8",
     "axios": "^0.27.2",
     "core-js": "^3.6.5",
     "date-fns": "^2.29.3",
@@ -18,12 +18,13 @@
     "swiper": "5.4.5",
     "three": "^0.146.0",
     "vue": "^2.6.12",
-    "vue-amazing-selector": "^0.2.6",
+    "vue-amazing-selector": "^0.3.0",
     "vue-lazyload": "1.3.3",
     "vue-pdf": "^4.3.0",
     "vue-router": "3.6.4",
     "vuedraggable": "^2.24.3",
-    "wc-messagebox": "^1.10.1"
+    "wc-messagebox": "^1.10.1",
+    "md5": "^2.3.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.15",
