--- a/package.json
+++ b/package.json
@@ -13,18 +13,18 @@
     "core-js": "^3.6.5",
     "date-fns": "^2.29.3",
     "echarts": "^5.3.3",
+    "md5": "^2.3.0",
     "pdfh5": "^1.4.2",
     "store": "^2.0.12",
     "swiper": "5.4.5",
     "three": "^0.146.0",
     "vue": "^2.6.12",
-    "vue-amazing-selector": "^0.3.0",
+    "vue-amazing-selector": "^0.3.1",
     "vue-lazyload": "1.3.3",
     "vue-pdf": "^4.3.0",
     "vue-router": "3.6.4",
     "vuedraggable": "^2.24.3",
-    "wc-messagebox": "^1.10.1",
-    "md5": "^2.3.0"
+    "wc-messagebox": "^1.10.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.15",
